--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="body.css">
     <link rel="stylesheet" href="header-bar.css">
-    <link rel="stylesheet" href="Login.css">
+    <link rel="stylesheet" href="login.css">
     <script src="Login.js"></script>
     <link rel="icon" href="AN-IMAGES/coffee-bean.png" type="image/x-icon">
     <title>Login</title>
